--- a/src/index.css
+++ b/src/index.css
@@ -474,6 +474,33 @@ margin-top: 30px;
   font-weight: 800;
   line-height: 1.4;
 }
+.headinaboutus
+{
+  font-size: 30px;
+  font-weight: 800;
+  line-height: 1.4;
+}
+
+.paraaboutus
+{
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+.aboutus_img
+{
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.footer_hero_heading
+{
+  font-size: 25px;
+  font-weight: 800;
+  line-height: 1.6;
+}
 
 .subheading
 {
