--- a/src/index.css
+++ b/src/index.css
@@ -286,14 +286,15 @@ a
 {
   margin-top: 50px;
 }
-
 .about_title_text
 {
-  font-size: 21px;
+  font-size: 30px;
+  font-weight: 700;
 }
 .about_para_text
 {
-  font-size: 12px;
+  font-size: 20px;
+  margin-top: 17px;
 }
 
 .box_padd_rwo
@@ -670,6 +671,18 @@ a{
   margin-top: 16px;
 }
 
+.error_page_text
+{
+  text-align: center;
+  font-weight: 800;  
+  font-size: 50px;
+}
+.erroimg
+{
+height: 550px;
+width: 100%;
+object-fit: contain;
+}
 
 @media only screen and (max-width: 600px) {
 
